app/themes/default/public/stylesheets/style.css
/* ... */
		section#desktop .element.list .cover:hover .cover-hover {
			opacity: 1;
		}

		section#desktop .element.list .cover i:before {
			font-size: 128px;
		}
		section#desktop .element.list .cover img {
			width: 128px;
			height: 128px;
		}

		section#desktop .element.list .cover .downloading {
			width:100%;
			bottom:0;
			position: absolute;
			background-color: rgba(0,0,0,0.5);
			color:#B2B2AF;
			padding-top: 0.2em;
			min-height: 1.2em;
		}
		section#desktop .element.list .cover .downloading span{
			position: absolute;
			bottom: 0;
			left: 50%;
			margin-left: -10px;
			margin-bottom: 0.2em;
			display: block;
		}

	section#desktop .element.list hr {
		width: 100%;
		height: 1px;
		background-color: #272727;
		color:#272727;
		border:0;
	}

	section#desktop .element.list p.infos {
		text-align: justify;
	}

	section#desktop .element.list .info {
		padding: 0 10px;
		height:30px;
		background:#3d3d3d;
		border:1px dashed #303030;
		display:inline-block;
		margin-top: 10px;
		color:#e25d33;
		line-height: 30px;
		vertical-align: top;
	}
		section#desktop .element.list .info i {
			margin-right: 5px;
		}
	section#desktop .element.list .showFiles{
		cursor: pointer;
		position: absolute;
		right: 0;
		bottom: 0;
		width: 90px;
		height: 28px;
		padding-left: 5px;
		vertical-align: top;
		-moz-box-shadow: -1px -1px 0 rgba(40,40,39,.1);
		-webkit-box-shadow: -1px -1px 0 rgba(40,40,39,.1);
		box-shadow: -1px -1px 0 rgba(40,40,39,.1);
		background: #e15d33;
		line-height: 28px;
	}

	section#desktop .element.list .showFiles i{ margin-right: 5px;}

	section#desktop .element.list .files {
		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
		filter: alpha(opacity=0);
		opacity: 0;

		-webkit-transition: opacity 0.5s ease;
		-moz-transition: opacity 0.5s ease;
		-o-transition: opacity 0.5s ease;
		-ms-transition: opacity 0.5s ease;
		transition: opacity 0.5s ease;
		visibility: hidden;
		color:#b2b2af !important;
		position: absolute;
		left:2.5%;
		top:180px;
		width: 92.5%;
		border: 2px solid #e15d33;
		border-top: 0;
		background-color: #474747;
		padding: 0 1%;
		height: auto;
	}

	section#desktop .element.list p {
			color:#B2B2AF;
	}

section#desktop .element.table {
	height: 25px;
	width: 100%;
	padding: 0 7px;
	margin: 0 auto;
	background-color: #474747;
	border: 2px solid #e15d33;
	border-bottom: 1px solid #b2b2af;
	border-top: 0;
	line-height: 25px;
	vertical-align: top;
	color:#B2B2AF;
}

table {
	margin:10px auto;
	width: 95%;
}

table th {
	font-weight: bold;
	font-size: 1.2em;
	background: rgba(225,93,51,0.5);
	padding-bottom: 5px;
	color:#b2b2af !important;
}

table td {
	color:#b2b2af !important;
	background: rgba(225,93,51,0.2);
	border-bottom: 1px solid #474747;
	text-align: center;
}

td, th {
	padding:5px;
}

footer {
	margin-top: 20px; 
	height:50px;
	width: 100%;
	clear: both;
}

footer a {
	color:#5f5f5f;
	border-bottom: 1px dotted #222222;
}

footer a:hover {
	border-bottom: 0;
}

.input-box {
	width:300px;
	margin: 10px auto;
	padding: 0;
}

section#desktop .input-box {margin: 0;margin-right: 5px; display: inline-block;width: auto;}
.input-box > * {
	float: left;
	padding: 0;
}

.input-box input {
	margin: 0;
	border-left: 1px solid rgba(40,39,27,0.3);
	height: 30px;
	padding-left: 4px;
	width: 263px;
	-webkit-box-shadow: inset 0px 0px 1px #aa5f47;
	-moz-box-shadow: inset 0px 0px 1px #aa5f47;
	box-shadow: inset 0px 0px 1px #aa5f47;
}

.input-box input:focus {
	outline: 0;
}

.input-box button {
	color:#282827;
	border: 1px solid #b14827;
	border-left: 1px solid rgba(40,39,27,0.3);
	text-shadow: rgba(214, 153, 133,0.3) 0px 0px 1px;
	background-color: #c9532d;
	-webkit-box-shadow: inset 0px 0px 1px #aa5f47;
	-moz-box-shadow: inset 0px 0px 1px #aa5f47;
	box-shadow: inset 0px 0px 1px #aa5f47;
	padding-left: 7px;
	padding-right: 7px;
	line-height: 30px;
	font-family: "Oswald";
}

.input-box i:before {
	margin: 0;
	text-align: center;
	font-size: 18px;
	border: 1px solid #b14827;
	border-right:0px;
	height: 30px;
	width: 30px;
	line-height: 30px;
	color: #282827;
	text-shadow: rgba(214, 153, 133,0.3) 0px 0px 1px;
	background-color: #c9532d;
	-moz-box-shadow: inset 0 0 3px rgba(222,86,47,.9);
	-webkit-box-shadow: inset 0 0 3px rgba(222,86,47,.9);
	box-shadow: inset 0 0 3px rgba(222,86,47,.9);
	cursor: pointer;
}

.input-box:hover {
	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.055), 0 0 5px rgba(236, 200, 82, 0.3);
 	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.055), 0 0 5px rgba(236, 200, 82, 0.3);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.055), 0 0 5px rgba(236, 200, 82, 0.3);
}

.button-group {
	float: right;
	margin-top: -35px;
}

.button-group a {
	text-decoration: none;
}

.button-group .input-box {
	height:30px;
	display:inline-block;
	color:#e25d33;
	line-height: 30px;
	vertical-align: top;
}

.login-button {
	text-align: center;
	font-size: 1.575em;
	margin: 0 auto;
	float: none;
	padding: 4px 7px;
}

	.login-button {
		cursor: pointer;
		border: 1px solid rgba(0,0,0,.5);
		background-color: #e15d33;
		display: block;
		background-image: -moz-linear-gradient(top, #e66b3b 0%, #de502c 100%);
		background-image: -o-linear-gradient(top, #e66b3b 0%, #de502c 100%);
		background-image: -webkit-linear-gradient(top, #e66b3b 0%, #de502c 100%);
		background-image: linear-gradient(top, #e66b3b 0%, #de502c 100%);
		color:#282827;
		vertical-align: middle;
		margin-top:7px;
	}

	.login-button:hover {
		-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 2px rgba(236, 200, 82, 0.6);
     	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 2px rgba(236, 200, 82, 0.6);
        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 2px rgba(236, 200, 82, 0.6);
	}
/* ... */

